--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 name: Hui Wang
-email: huiwang0705@gmail.com
+email: i1103552872@gmail.com
 description: ""
 url:  "" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog/
