--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 name: Hui Wang
 email: i1103552872@gmail.com
 description: ""
-url:  "" # the base hostname & protocol for your site
-baseurl: "" # the subpath of your site, e.g. /blog/
-last_updated:  # leave blank if you don't want to display last updated
+url:  "http://wwmore.github.io" # the base hostname & protocol for your site
+baseurl: "/hwang" # the subpath of your site, e.g. /blog/
+last_updated: May 2019 # leave blank if you don't want to display last updated
 
 # -----------------------------------------------------------------------------
 # Research Interests
