--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: Hui Wang
 email: i1103552872@gmail.com
 description: ""
 url: http://wwmore.github.io/hwang # the base hostname & protocol for your site
-baseurl: /wwmore.github.io/ # the subpath of your site, e.g. /blog/
+baseurl: /hwang/ # the subpath of your site, e.g. /blog/
 last_updated: May 2019 # leave blank if you don't want to display last updated
 
 # -----------------------------------------------------------------------------
