--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,11 @@ research_interests:
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: # WWmore
+researchgate_username: Wang_Hui35 #
+github_username:  WWmore
 twitter_username: # your Twitter handle
 linkedin_username:  # your LinkedIn user name
-scholar_userid:  Wang_Hui35 # your Google Scholar ID
+scholar_userid:  # o-fHR5oAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 contact_note: # You can even add a little note about which of these is the best way to reach you.
 
